--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="btn" id="1"></div>
         <div class="btn" id="2"></div>
         <div class="btn" id="3"></div>
-        <div class="btn equal" id=" ="></div>
+        <div class="btn operators equal" id=" ="></div>
         <div class="btn" id="0"></div>
         <div class="btn" id="."></div>
     </div>
