--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 <div class="container">
     <div class="container-display">
-        <div class="display"></div>
+        <div class="display">
+            <p class="line l1"></p>
+            <p class="line l2"></p>
+        </div>
 </div>
 
     <div class="container-func">
